# 3rd-sem

./: CMakeLists.txt  README.md
documents/: Пробное описание HexoWorld.md  Ссылки на материалы.md
documents/.obsidian/: workspace.json
src/: 3rd sem.cpp  3rd sem.h  CMakeLists.txt
src/include/: camera_header.h  hexbox.h  hexsagon_header.h
